rhai-1448 doc edits for Knowledge Tuning example

--- a/examples/knowledge-tuning/.env.example
+++ b/examples/knowledge-tuning/.env.example
@@ -3,18 +3,18 @@
 # Hugging Face Token - Use when trying to using specific models from hugging face
 # HF_TOKEN=YourAPIKey
 
-# Required in Steps 01, 05, 06
+# Required in modules 01, 05, 06
 STUDENT_MODEL_NAME=RedHatAI/Llama-3.1-8B-Instruct
 
 # Knowledge Generation
-# Required in Steps 03
+# Required in module 03
 TEACHER_MODEL_NAME=openai/gpt-oss-120b
 TEACHER_MODEL_BASE_URL=http://0.0.0.0:8000/v1
 TEACHER_MODEL_API_KEY=None
 
 
 # Knowledge Mixing
-# Required in Steps 04
+# Required in module 04
 TOKENIZER_MODEL_NAME=RedHatAI/Llama-3.1-8B-Instruct
 SAVE_GPT_OSS_FORMAT=false
 CUT_SIZES=5,50
