--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -67,3 +67,36 @@ jobs:
         with:
           local-ref: ${{ github.event.pull_request.head.sha }}
           remote-ref: origin/${{ github.event.pull_request.base.ref }}
+
+  tests:
+    name: Unit and Integration Tests
+    runs-on: ubuntu-latest
+    needs: linting-and-formatting
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[test]"
+
+      - name: Run unit tests
+        run: pytest tests/unit -v --tb=short
+
+      - name: Run integration tests
+        run: pytest tests/integration -v --tb=short
+
+      - name: Run notebook validation tests (non-execution)
+        run: pytest tests/notebooks -v --tb=short -m "not slow"
+
+      - name: Generate test summary
+        if: always()
+        run: |
+          echo "## Test Results" >> $GITHUB_STEP_SUMMARY
+          echo "Unit and integration tests completed" >> $GITHUB_STEP_SUMMARY
